--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="footer">
             <p><b>ESA/ECRA #7011625</b></p>
             <p><b>To learn more, click <a href="http://electricalsmarts.ca" target="_blank">here</a></b></p>
-            <img src="./Images/ESA.jpg">
+            <a href="http://electricalsmarts.ca" target="_blank"><img src="./Images/ESA.jpg"></a>
         </div>
 
         
